--- a/Projects/SurvivalGame/Assets/SurvivalGame.csproj
+++ b/Projects/SurvivalGame/Assets/SurvivalGame.csproj
@@ -78,6 +78,14 @@
     <Compile Include="Objects\Entities\Testing\Rocket\Rocket.cs" />
     <Compile Include="Objects\Entities\Testing\Skybox.cs" />
     <Compile Include="Objects\Entities\Testing\TestCube\CubeObj2.cs" />
+    <Compile Include="World\Chunk\Chunk.MeshGeneration.cs" />
+    <Compile Include="World\Chunk\Chunk.IO.cs" />
+    <Compile Include="World\Generation\GenPass.cs" />
+    <Compile Include="World\Generation\GenPasses\AngleTileTypeGenPass.cs" />
+    <Compile Include="World\Generation\GenPasses\HeightTileTypeGenPass.cs" />
+    <Compile Include="World\Generation\GenPasses\NoiseChunkEntityGenPass.cs" />
+    <Compile Include="World\Generation\GenPasses\NoiseHeightmapGenPass.cs" />
+    <Compile Include="World\Generation\GenUtils.cs" />
     <Compile Include="World\Sun\Sun.cs" />
     <Compile Include="Objects\Entities\Testing\TestCube\CubeObj.cs" />
     <Compile Include="Objects\Entities\Testing\TestCube\GiantPlatform.cs" />
@@ -87,17 +95,21 @@
     <Compile Include="Objects\Entities\Testing\TestSphere\TestSphere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoundInstance.cs" />
-    <Compile Include="World\AtmosphereSystem.cs" />
-    <Compile Include="World\ChunkRenderer.cs" />
-    <Compile Include="World\Chunk.cs" />
-    <Compile Include="World\Tile.cs" />
-    <Compile Include="World\Tiles\Dirt.cs" />
-    <Compile Include="World\Tiles\Sand.cs" />
-    <Compile Include="World\Tiles\Grass.cs" />
-    <Compile Include="World\Tiles\Stone.cs" />
-    <Compile Include="World\TileType.cs" />
+    <Compile Include="AtmosphereSystem.cs" />
+    <Compile Include="World\Chunk\ChunkRenderer.cs" />
+    <Compile Include="World\Chunk\Chunk.cs" />
+    <Compile Include="World\Tiles\Tile.cs" />
+    <Compile Include="World\Tiles\Types\Dirt.cs" />
+    <Compile Include="World\Tiles\Types\Sand.cs" />
+    <Compile Include="World\Tiles\Types\Grass.cs" />
+    <Compile Include="World\Tiles\Types\Stone.cs" />
+    <Compile Include="World\Tiles\TileType.cs" />
     <Compile Include="World\Water\Water.cs" />
+    <Compile Include="World\World.Generation.cs" />
+    <Compile Include="World\World.IO.cs" />
     <Compile Include="World\World.cs" />
+    <Compile Include="World\WorldInfo.cs" />
+    <Compile Include="World\Worlds\Overworld.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
