Big changes related to SurvivalGame: - Added ImmersionFramework library, which will contain some code related to main server, client, camera, player, AI, entity, input and brain logic and designs. - Redesigned how brains and inputs work from scratch. Everything is way more complex now, as even bodies have their own "input memory", and privileges to modify it on arrival. - Player class added. - Souls added. They're invisible for now. - Brain model added.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Projects/AbyssCrusaders/Build
 Projects/SurvivalGame/Assets/bin
 Projects/SurvivalGame/Assets/obj
 Projects/SurvivalGame/Build
+Projects/ImmersionFramework/bin
+Projects/ImmersionFramework/obj
+Projects/ImmersionFramework/Ignored
