--- a/Projects/GameEngine/GameEngine.csproj
+++ b/Projects/GameEngine/GameEngine.csproj
@@ -79,6 +79,7 @@
     <Compile Include="DebugInternal.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Graphics\Components\Renderers\MeshLOD.cs" />
     <Compile Include="Graphics\Enums\BlendingFactor.cs" />
     <Compile Include="Graphics\Enums\PolygonMode.cs" />
     <Compile Include="Graphics\Objects\VertexAttributes\NormalAttribute.cs" />
@@ -217,7 +218,7 @@
     <Compile Include="Time.cs" />
     <Compile Include="Transform.cs" />
     <Compile Include="Utils\ArrayUtils.cs" />
-    <Compile Include="Utils\Utils.cs" />
+    <Compile Include="Utils\InternalUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
