Added GLUtils class, (may get moved & renamed later) + some cleanups.

--- a/Projects/GameEngine/GameEngine.csproj
+++ b/Projects/GameEngine/GameEngine.csproj
@@ -79,6 +79,7 @@
     <Compile Include="DebugInternal.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Graphics\Rendering\Utils\GLUtils.cs" />
     <Compile Include="Structures\Bounds.cs" />
     <Compile Include="Utils\FastNoise.cs" />
     <Compile Include="Graphics\Components\Renderers\MeshLOD.cs" />
