--- a/Projects/GameEngine/GameEngine.csproj
+++ b/Projects/GameEngine/GameEngine.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Graphics\Rendering\Utils\GLUtils.cs" />
+    <Compile Include="ImportExport\Resources.Functions.cs" />
     <Compile Include="Structures\Bounds.cs" />
     <Compile Include="Utils\FastNoise.cs" />
     <Compile Include="Graphics\Components\Renderers\MeshLOD.cs" />
@@ -145,7 +146,7 @@
     <Compile Include="ImportExport\AssetManager.cs" />
     <Compile Include="ImportExport\Audio\OggManager.cs" />
     <Compile Include="ImportExport\Audio\WavManager.cs" />
-    <Compile Include="ImportExport\ContentManagement.cs" />
+    <Compile Include="ImportExport\Resources.cs" />
     <Compile Include="ImportExport\Graphics\MaterialManager.cs" />
     <Compile Include="ImportExport\Graphics\Meshes\FbxManager.cs" />
     <Compile Include="ImportExport\Graphics\Meshes\MeshManager.cs" />
