--- a/Projects/GameEngine/GameEngine.csproj
+++ b/Projects/GameEngine/GameEngine.csproj
@@ -75,8 +75,8 @@
     <Compile Include="Components\Attributes\ComponentAttribute.cs" />
     <Compile Include="Components\Component.cs" />
     <Compile Include="Components\Attributes\ComponentParameters.cs" />
-    <Compile Include="Debug.cs" />
-    <Compile Include="DebugInternal.cs" />
+    <Compile Include="Core\Debug.cs" />
+    <Compile Include="Core\DebugInternal.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Graphics\Rendering\Utils\GLUtils.cs" />
@@ -105,8 +105,8 @@
     <Compile Include="Graphics\Enums\FramebufferAttachment.cs" />
     <Compile Include="Extensions\PixelExtensions.cs" />
     <Compile Include="Extensions\IOExtensions.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="GameObject.cs" />
+    <Compile Include="Core\Game.cs" />
+    <Compile Include="Core\GameObject.cs" />
     <Compile Include="Graphics\Animation\AnimationBone.cs" />
     <Compile Include="Graphics\Animation\AnimationSkeleton.cs" />
     <Compile Include="Graphics\Enums\FilterMode.cs" />
@@ -174,7 +174,7 @@
     <Compile Include="Input\InputVariables.cs" />
     <Compile Include="Input\Keys.cs" />
     <Compile Include="Input\MouseButton.cs" />
-    <Compile Include="Mathf.cs" />
+    <Compile Include="Core\Mathf.cs" />
     <Compile Include="Graphics\Objects\Mesh\Mesh.cs" />
     <Compile Include="Physics\Collision\Collision.cs" />
     <Compile Include="Physics\Collision\Collision2D.cs" />
@@ -200,18 +200,18 @@
     <Compile Include="Physics\PhysicsEngine.cs" />
     <Compile Include="Physics\RaycastHit.cs" />
     <Compile Include="Physics\RigidbodyInternal.cs" />
-    <Compile Include="ProgrammableEntity.cs" />
-    <Compile Include="ProgrammableEntityHooks.cs" />
-    <Compile Include="ProgrammableEntityTypeInfo.cs" />
+    <Compile Include="Core\ProgrammableEntity.cs" />
+    <Compile Include="Core\ProgrammableEntityHooks.cs" />
+    <Compile Include="Core\ProgrammableEntityTypeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Random.cs" />
-    <Compile Include="ReflectionCache.cs" />
-    <Compile Include="RegexCache.cs" />
+    <Compile Include="Core\Random.cs" />
+    <Compile Include="Core\ReflectionCache.cs" />
+    <Compile Include="Core\RegexCache.cs" />
     <Compile Include="Structures\Matrix4x4.cs" />
     <Compile Include="Structures\MeshInfo.cs" />
     <Compile Include="Structures\Quaternion.cs" />
@@ -226,8 +226,8 @@
     <Compile Include="Structures\Vector3Int.cs" />
     <Compile Include="Structures\Vector4.cs" />
     <Compile Include="Structures\Vector4Int.cs" />
-    <Compile Include="Time.cs" />
-    <Compile Include="Transform.cs" />
+    <Compile Include="Core\Time.cs" />
+    <Compile Include="Core\Transform.cs" />
     <Compile Include="Utils\ArrayUtils.cs" />
     <Compile Include="Utils\FastNoise\FastNoise.Decimal2.cs" />
     <Compile Include="Utils\FastNoise\FastNoise.Decimal3.cs" />
