Update .csproj to use SolutionDefines.targets from solution's directory.

--- a/Assets/GameEngine.csproj
+++ b/Assets/GameEngine.csproj
@@ -248,4 +248,5 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)SolutionDefines.targets" Condition="exists('$(SolutionDir)SolutionDefines.targets')" />
 </Project>
