Refactored Mathf and some structures.

--- a/Assets/GameEngine.csproj
+++ b/Assets/GameEngine.csproj
@@ -77,13 +77,15 @@
     <Compile Include="Components\Attributes\ComponentParameters.cs" />
     <Compile Include="Core\Debug.cs" />
     <Compile Include="Core\DebugInternal.cs" />
-    <Compile Include="Core\Mathf.MinMax.cs" />
-    <Compile Include="Core\Mathf.Interpolation.cs" />
-    <Compile Include="Core\Mathf.Clamping.cs" />
-    <Compile Include="Core\Mathf.Rounding.cs" />
-    <Compile Include="Core\Mathf.Essential.cs" />
+    <Compile Include="Core\Mathf\Mathf.Constants.cs" />
+    <Compile Include="Core\Mathf\Mathf.MinMax.cs" />
+    <Compile Include="Core\Mathf\Mathf.Interpolation.cs" />
+    <Compile Include="Core\Mathf\Mathf.Clamping.cs" />
+    <Compile Include="Core\Mathf\Mathf.Rounding.cs" />
+    <Compile Include="Core\Mathf\Mathf.Essential.cs" />
     <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Graphics\RenderBatch.cs" />
     <Compile Include="Graphics\Rendering\Utils\GLUtils.cs" />
     <Compile Include="ImportExport\Resources.Functions.cs" />
     <Compile Include="Structures\Bounds.cs" />
@@ -179,7 +181,7 @@
     <Compile Include="Input\InputVariables.cs" />
     <Compile Include="Input\Keys.cs" />
     <Compile Include="Input\MouseButton.cs" />
-    <Compile Include="Core\Mathf.cs" />
+    <Compile Include="Core\Mathf\Mathf.Utils.cs" />
     <Compile Include="Graphics\Objects\Mesh\Mesh.cs" />
     <Compile Include="Physics\Collision\Collision.cs" />
     <Compile Include="Physics\Collision\Collision2D.cs" />
@@ -220,17 +222,17 @@
     <Compile Include="Structures\Matrix4x4.cs" />
     <Compile Include="Structures\MeshInfo.cs" />
     <Compile Include="Structures\Quaternion.cs" />
-    <Compile Include="Structures\RectFloat.cs" />
-    <Compile Include="Structures\RectInt.cs" />
-    <Compile Include="Structures\RectOffset.cs" />
-    <Compile Include="Structures\Vector2.cs" />
-    <Compile Include="Structures\Vector2CrossOperators.cs" />
-    <Compile Include="Structures\Vector2Int.cs" />
-    <Compile Include="Structures\Vector2UShort.cs" />
-    <Compile Include="Structures\Vector3.cs" />
-    <Compile Include="Structures\Vector3Int.cs" />
-    <Compile Include="Structures\Vector4.cs" />
-    <Compile Include="Structures\Vector4Int.cs" />
+    <Compile Include="Structures\Rectangles\RectFloat.cs" />
+    <Compile Include="Structures\Rectangles\RectInt.cs" />
+    <Compile Include="Structures\Rectangles\RectOffset.cs" />
+    <Compile Include="Structures\Vectors\Vector2\Vector2.cs" />
+    <Compile Include="Structures\Vectors\Vector2\Vector2.CrossOperators.cs" />
+    <Compile Include="Structures\Vectors\Vector2\Vector2Int.cs" />
+    <Compile Include="Structures\Vectors\Vector2\Vector2UShort.cs" />
+    <Compile Include="Structures\Vectors\Vector3\Vector3.cs" />
+    <Compile Include="Structures\Vectors\Vector3\Vector3Int.cs" />
+    <Compile Include="Structures\Vectors\Vector4\Vector4.cs" />
+    <Compile Include="Structures\Vectors\Vector4\Vector4Int.cs" />
     <Compile Include="Core\Time.cs" />
     <Compile Include="Core\Transform.cs" />
     <Compile Include="Utils\ArrayUtils.cs" />
